# teloxide-test-bot

./: Cargo.toml  LICENSE  get_updates.sh
.devcontainer/: Containerfile
src/: main.rs
