[package]
name = "teloxide-test-bot"
version = "0.1.0"
authors = ["Andrey Brusnik <dev@shdwchn.io>"]
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
teloxide = { features = [
    "full",
    "tracing",
], git = "https://github.com/aon/teloxide.git", branch = "add-tracing" }
tokio = { features = ["full"], version = "1.43" }
tracing = "0.1"
